# inTeRface_dev

./: .gitmodules  CMakeLists.txt  lv_conf.h  main.c
src/: can.c  can.h  main.c
ui/: inTeRface.c  inTeRface.h
